--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>Autotrack example</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="../dist/wm_autotrack.min.js"></script>
+        <script type="text/javascript" src="../src/wm_autotrack.js"></script>
     </head>
     <body>
         <div>Autorack demo page</div>
@@ -19,39 +19,49 @@ and open the template in the editor.
         <p>
             <a href="dummy.doc" target="_blank">dummy.doc</a>
         </p>
+        <p>
+            <a href="mailto:someone@example.com">Send Mail</a>
+        </p>
+        <p>
+            <a href="http://www.wiredminds.de" target="_blank">www.wiredminds.de</a>
+        </p>
         <!-- WiredMinds eMetrics tracking with LeadLab V6.4 START -->
         <script type="text/javascript"><!--
         var wiredminds = [];
-        wiredminds.push(["setTrackParam", "wm_custnum", "replaceme"]);
-        // Begin own parameters.
-        wiredminds.push(["setTrackParam", "wm_campaign_key", "utm_campaign"]);
-        // End own parameters.
-        wiredminds.push(["count"]); 
-        
-        (function() {
-                function wm_async_load() {
-                        var wm = document.createElement("script");
-                        wm.type = "text/javascript";
-                        wm.async = true;
-                        wm.src = "http://wm.wiredminds.de/track/count.js";
-                        var el = document.getElementsByTagName('script')[0];
-                        el.parentNode.insertBefore(wm, el);
-                }
+          wiredminds.push(["setTrackParam", "wm_custnum", "nosuchcustomer"]);
+          /* Begin own parameters */
+          wiredminds.push(["setTrackParam", "wm_campaign_key", "utm_campaign"]);
+          /* End own parameters */
+          wiredminds.push(["count"]);
 
-                if (window.addEventListener) {
-                        window.addEventListener('load', wm_async_load, false);
-                } else if (window.attachEvent){
-                        window.attachEvent('onload', wm_async_load);
-                }
-        })();
-        // -->
+          (function() {
+            function wm_async_load() {
+              var wm = document.createElement("script");
+              wm.type = "text/javascript";
+              wm.async = true;
+              wm.src = "http://wm.wiredminds.de/track/count.js";
+              var el = document.getElementsByTagName('script')[0];
+              el.parentNode.insertBefore(wm, el);
+            }
+
+            if (window.addEventListener) {
+              window.addEventListener('load', wm_async_load, false);
+            } else if (window.attachEvent) {
+              window.attachEvent('onload', wm_async_load);
+            }
+          })();
+          // -->
         </script>
         <!-- WiredMinds eMetrics tracking with LeadLab V6.4 END -->
 
 
         <script>
             var wmAutoTrackObj = new wmAutoTrack({
-                  trackDownlodsWithPath: false,
+                  trackDownloadsWithPath: false,
+                  trackMailLinkAsEvents: true,
+                  //trackMailtoWithPath: true,
+                  milestoneMailto: "suchmilestone",
+                  milestoneMailto: "suchmilestone",
                   debug: true
             });
             if (window.addEventListener) {
